# danapply

./: .gitignore  BUILD_LOG.md  CHANGELOG.md  GETTING_STARTED.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: danapply.md  delete.md  jobtracker.md  quickapply.md  run.md  status.md
docs/: SKILL.md  danish_register_guide.md  push_back_library.md
docs/workflows/: dagpenge_check.md  joblog_prompt.md  tailor.md  update_profile.md
skills/danapply/: orchestration.md  tone_spec.md  triggers.yaml
skills/danapply/workflows/: cv_session.md  interview_prep.md  log_outcome.md  onboarding.md  process_new.md  voice_capture.md
src/danapply/: __init__.py  cli.py  config.py  memory.py  models.py  paths.py  scorer.py
src/danapply/dagpenge/: __init__.py  tracker.py
src/danapply/extract/: __init__.py  register.py  skills.py  voice.py
src/danapply/interview/: __init__.py  prep.py
src/danapply/joblog/: __init__.py  generator.py
src/danapply/onboarding/: __init__.py  chapters.py  models.py  profile_builder.py  runner.py  state.py
src/danapply/parse/: __init__.py  pdf.py  text.py
src/danapply/render/: __init__.py  photo.py  tailoring.py
src/danapply/render/templates/: __init__.py  canonical.py
src/danapply/scaffolding/: __init__.py  init_data_dir.py
src/danapply/scaffolding/blank/: cv_content.md  profile.yaml  targets.yaml  voice_profile.md
src/danapply/scaffolding/example/: cv_content.md  profile.yaml  targets.yaml  voice_profile.md
tests/: test_cli_ingest.py  test_cli_misc.py  test_dagpenge.py  test_interview_prep.py  test_joblog.py  test_memory.py  test_models.py  test_onboarding.py  test_parsers.py  test_register.py  test_render_base_and_letter.py  test_scorer.py  test_skills.py  test_skills_plugin.py  test_smoke.py  test_tailoring.py  test_voice.py
tests/fixtures/: sample_greenhouse_jobposting.html  sample_meta_only.html
